--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -6,12 +6,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{539108BA-678F-4B42-92BD-D9B54444F765}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SimpleRPGGame</RootNamespace>
-    <AssemblyName>SimpleRPGGame</AssemblyName>
+    <RootNamespace>WarlordsOfDraemor</RootNamespace>
+    <AssemblyName>WarlordsOfDraemor</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
