--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -46,6 +46,13 @@
   <ItemGroup>
     <Compile Include="About.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="Items\Item.cs" />
+    <Compile Include="Items\Helmet.cs" />
+    <Compile Include="Items\ChestArmor.cs" />
+    <Compile Include="Items\Gauntlets.cs" />
+    <Compile Include="Items\LegArmor.cs" />
+    <Compile Include="Items\Shield.cs" />
+    <Compile Include="Items\Weapon.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
