--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -44,8 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="About.cs" />
+    <Compile Include="Character.cs" />
     <Compile Include="Enemy.cs" />
+    <Compile Include="Items\Armor.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\Helmet.cs" />
     <Compile Include="Items\ChestArmor.cs" />
