--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tavern.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
