--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Character.cs" />
+    <Compile Include="Combat.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Items\Armor.cs" />
     <Compile Include="Items\Item.cs" />
