--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -44,21 +44,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Character.cs" />
-    <Compile Include="Combat.cs" />
-    <Compile Include="Enemy.cs" />
+    <Compile Include="Characters\Character.cs" />
+    <Compile Include="Gameplay\Chest.cs" />
+    <Compile Include="Gameplay\Combat.cs" />
+    <Compile Include="Characters\Enemy.cs" />
+    <Compile Include="Gameplay\Corpse.cs" />
+    <Compile Include="Gameplay\Loot.cs" />
+    <Compile Include="Gameplay\Lootable.cs" />
     <Compile Include="Items\Armor.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\Helmet.cs" />
     <Compile Include="Items\ChestArmor.cs" />
     <Compile Include="Items\Gauntlets.cs" />
     <Compile Include="Items\LegArmor.cs" />
+    <Compile Include="Items\Potions.cs" />
     <Compile Include="Items\Shield.cs" />
     <Compile Include="Items\Weapon.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Characters\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tavern.cs" />
+    <Compile Include="Gameplay\Tavern.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
