--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gameplay\NewGameStart.cs" />
+    <Compile Include="Items\Book.cs" />
     <Compile Include="Characters\Character.cs" />
     <Compile Include="Gameplay\Chest.cs" />
     <Compile Include="Gameplay\Combat.cs" />
@@ -63,7 +65,7 @@
     <Compile Include="Characters\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Gameplay\Tavern.cs" />
+    <Compile Include="Gameplay\Hub.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
