A shed load more location and menu work done
- Added properties, constructor and methods to NPC class
- Removed player header bar
- Added player menu to player class
- Added exploration class
- Added Tavern property to hub class
- Added constructor to all sub-locations (i.e. stores)
- Moved hub location properties to the location class so that all locations inherit them
- Added store menu method to store class
- Added display travel menu method to travel menu class
- Populated to Fox and hound initial location
- Already instantiated locations now use the new constructors
- Fixed the new game start so that it finds the Fox and Hound, sets players location to it and then calls the location menu
- Some additional comments/summaries throughout

--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Characters\NPC.cs" />
+    <Compile Include="Gameplay\Locations\Exploration.cs" />
     <Compile Include="Gameplay\Locations\HubLocations\Weaponsmith.cs" />
     <Compile Include="Gameplay\Locations\HubLocations\Blacksmith.cs" />
     <Compile Include="Gameplay\Locations\HubLocations\EmptyHouse.cs" />
