Stat and stat modifier work
- Created the charisma stat and added to all characters
- Added an enemyclass property to all characters
- Add constructors to all stats
- Updated player creation to use the new stat constructors
- Done an initial pass on the Stat class and it's methods
    -  Added constructor
    - Added methods to add and remove modifiers and to recalculate the stat's effective value
- Initial pass on the StatModifier class

--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Characters\Stats\Agility.cs" />
     <Compile Include="Characters\Stats\Constitution.cs" />
     <Compile Include="Characters\Stats\Luck.cs" />
+    <Compile Include="Characters\Stats\StatModifier.cs" />
+    <Compile Include="Characters\Stats\Charisma.cs" />
     <Compile Include="Characters\Stats\Strength.cs" />
     <Compile Include="Characters\Stats\Stat.cs" />
     <Compile Include="Gameplay\Locations\Exploration.cs" />
