--- a/SimpleRPGGame/WarlordsOfDraemor.csproj
+++ b/SimpleRPGGame/WarlordsOfDraemor.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Gameplay\Locations\Hub.cs" />
     <Compile Include="Gameplay\Locations\WorldLocations.cs" />
     <Compile Include="Gameplay\Locations\LocationTypes\Village.cs" />
+    <Compile Include="UI\UI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
